--- a/scaffolds/app-ts/src/pages/Home/index.module.scss
+++ b/scaffolds/app-ts/src/pages/Home/index.module.scss
@@ -6,13 +6,13 @@
 }
 
 .title {
-  font-size: 18px;
+  font-size: 36rpx;
   font-weight: bold;
-  margin: 10px 0;
+  margin: 20rpx 0;
 }
 
 .info {
-  font-size: 18px;
-  margin: 4px 0;
+  font-size: 36rpx;
+  margin: 8rpx 0;
   color: #555;
 }
