--- a/scaffolds/todos/src/pages/todos/index.module.scss
+++ b/scaffolds/todos/src/pages/todos/index.module.scss
@@ -22,10 +22,23 @@ page {
   align-items: center;
 }
 
+.login-button {
+  display: inline-block;
+  background: none;
+  border: none;
+  width: auto;
+  height: auto;
+}
+
+.login-button:after{
+  content: none;
+}
+
 .avatar {
   width: 130rpx;
   height: 130rpx;
   border-radius: 50%;
+  background-color: #FFF;
   align-self: center;
 }
 
@@ -34,6 +47,7 @@ page {
   text-align: center;
   font-size: 40rpx;
   font-weight: 100;
+  color: #FFF;
 }
 
 .todo-items {
@@ -65,9 +79,9 @@ page {
   transition: border 0.2s;
 }
 
-.todo-item:last-child {
-  margin-bottom: 0;
-}
+// .todo-item:last-child {
+//   margin-bottom: 0;
+// }
 
 .todo-item::before {
   content: '';
@@ -118,6 +132,61 @@ page {
 
 .checked.todo-item::after {
   opacity: 1;
+}
+
+.todo-item-operation {
+  display: inline-block;
+  background: none;
+  color: #FFF;
+  border: none;
+}
+
+.todo-item-operation:after {
+  content: none;
+}
+
+.close-wrapper {
+  box-sizing: border-box;
+  position: absolute;
+  top: 0;
+  right: 0;
+  width: 80rpx;
+  height: 80rpx;
+  padding-top: 20rpx;
+  padding-left: 20rpx;
+}
+
+.close {
+  box-sizing: border-box;
+  position: relative;
+  top: 0;
+  right: 0;
+  width: 40rpx;
+  height: 40rpx;
+  border-radius: 50%;
+  background-color: rgba(14, 222, 255, 0.3);
+}
+
+.close::before {
+    position: absolute;
+    content: ' ';
+    background-color: #2c2c2c;
+    width: 8rpx;
+    height: 30rpx;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%) rotate(45deg);
+}
+.close::after {
+    position: absolute;
+    content: ' ';
+    background-color: #2c2c2c;
+    width: 8rpx;
+    height: 30rpx;
+    border-radius: 4rpx;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%) rotate(-45deg);
 }
 
 .todo-footer {
